--- a/01_knapsack 2D_exhaustive.ipynb
+++ b/01_knapsack 2D_exhaustive.ipynb
@@ -7,7 +7,7 @@
     "# Pareto Front Fundamentals With The Knapsack Problem\n",
     "\n",
     "\n",
-    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/f/fd/Knapsack.svg\" width=300>\n",
+    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/f/fd/Knapsack.svg\" width=250>\n",
     "\n",
     "Here you will learn about Pareto Fronts.\n",
     "\n",
@@ -17,21 +17,57 @@
     "<a href=\"https://colab.research.google.com/github/elzurdo/multi_objective_optimisation/blob/master/01_knapsack%202D_exhaustive.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"First: Open In Colab\"/></a>\n",
     "\n",
     "\n",
-    "In this notebook you will learn:  \n",
+    "**What you'll learn**.   \n",
+    "* Multi-objective optimisation terms: what *Decision Spaces* and *Objective Spaces* are and how to define these for the knapsack problem.\n",
     "* The limitations of Single Objective Optimisation  \n",
-    "* Identifying a Pareto Front of a distribution of solutions\n",
+    "* Pareto Fronts: Identifying by eye Pareto optimal solutions within a distribution as well as pseudocode for selecting these non-dominated solutions.\n",
     "\n",
     "To this end we will optimise for the knapsack problem. \n",
     "\n",
-    "**The Knapsack Problem**   \n",
+    "> **The Knapsack Problem**   \n",
     "In this challenge we will fill virtual knapsacks with packages that have monetary value and weight, \n",
     "where our objective is to minimise the final weight of the knapsack and maximise the total monetary value of its contents.    \n",
     "(You will also be able to change the objectives from min-max to max-max or any other combination.) \n",
     "\n",
-    "For simplicity here we will explore an exhaustive solution space, i.e, one where we can brute force our way to \n",
+    "For simplicity, in this notebook, we will explore an exhaustive solution space, i.e, one where we can brute force our way to \n",
     "all the solutions.  \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Recommended Notebook Usage**\n",
     "\n",
-    "Throughout you will see *CHANGE ME!* next to variables that are worth exploring.  "
+    "We recommend doing each of the following steps at a time and answer the summary questions to ensure that the main lessons have been learned. \n",
+    "\n",
+    "<ul>\n",
+    "      \n",
+    "<details>\n",
+    "        <summary>Setup</summary> \n",
+    "            Understand the data setup of packages and how they relate to the knapssacks \n",
+    "</details>\n",
+    "    \n",
+    "<details>\n",
+    "        <summary>Decision and Objective Spaces</summary> \n",
+    "            These are concepts of multi-objective optimisation that have not been introduced in the previous videos  (but will appear in summary video).<br>Try to understand what they are and how this relates to the knapsack problem.  \n",
+    "</details>\n",
+    "    \n",
+    "<details>\n",
+    "        <summary>Single Objective Optimisation</summary> \n",
+    "            Here you will create a 1D heuristic and apply Single Objective Optimistion. \n",
+    "</details>\n",
+    "    \n",
+    "<details>\n",
+    "        <summary>Pareto Optimisation</summary> \n",
+    "            The fun part! We will identify Pareto Optimal solutions within a distribution. To appreciate how it works try to understand the Pareto Front pseudocode.\n",
+    "</details>\n",
+    "    \n",
+    "</ul>\n",
+    "    \n",
+    "\n",
+    "Throughout you will see ***CHANGE ME!*** next to variables that are worth exploring. In the notebook you will see recommendation of how to change them, but feel free to be creative!"
    ]
   },
   {
@@ -82,9 +118,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data: Packages \n",
+    "# Packages \n",
     "\n",
-    "Here define the distribution of weight and monetary value of the packages.   \n",
+    "Let's create some data!\n",
+    "\n",
+    "<img src=\"https://uk.packsize.com/wp-content/uploads/sites/11/2015/05/wp-boxes.jpg\" width=300>\n",
+    "\n",
+    "Here create packages by defining the distribution of weight and monetary value of each.   \n",
     "\n",
     "Parameters of interest:  \n",
     "* `N_PACKAGES` - the total number packages to choose from.  \n",
@@ -214,7 +254,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Solution Space Size\n",
+    "#  Decision Space\n",
+    "\n",
+    "In multi-objective optimisation the ***Decision Space*** is defined as the parameters over which the user has control.   \n",
+    "\n",
+    "In the knapsack problem we have control over which packages to put in a knapsack.  \n",
+    "\n",
+    "If the number of possible package combinations is small enough we can brute force our way to \n",
+    "the actual distribution. That is the objective of this notebook. \n",
+    "\n",
+    "In the subsequent tutorial we will discuss optimising in an intractable solution space.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Decision Space Size\n",
     "\n",
     "`N_PACKAGES_PER_KNAPSACK` determines that number of packages that fit into a knapsack.  \n",
     "Along with the `N_PACKAGES` parameter there is a finite number of knapsacks that may be generated.  \n",
@@ -265,7 +321,7 @@
     "    else:\n",
     "        return f'{int(x):,}'\n",
     "\n",
-    "N_PACKAGES_PER_KNAPSACK = 4  # CHANGE ME!\n",
+    "N_PACKAGES_PER_KNAPSACK = 4  # CHANGE ME! (Note! make sure that the number of combinations is below 20,000)\n",
     "# -----------\n",
     "    \n",
     "n = N_PACKAGES\n",
@@ -280,16 +336,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Defining The Decision Space\n",
+    "## Knapsacks\n",
     "\n",
-    "In multi-objective optimisation the ***Decision Space*** is defined as the parameters over which the user has control.   \n",
+    "Here we will create the knapssacks\n",
     "\n",
-    "In the knapsack problem we have control over which packages to put in a knapsack.  \n",
     "\n",
-    "If the number of possible package combinations is small enough we can brute force our way to \n",
-    "the actual distribution. That is the objective of this notebook. \n",
     "\n",
-    "In the subsequent tutorial we will discuss optimising in an intractable solution space.  "
+    "<img src=\"https://www.chatelaine.com/wp-content/uploads/2019/07/5-most-popular-backpacks-feature.jpg\" width=500>\n",
+    "\n",
+    "\n",
+    "Each knapsack contains one possible combination of packages. "
    ]
   },
   {
@@ -431,7 +487,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Defining The Objective Space\n",
+    "**Interim Checkpoint**\n",
+    "\n",
+    "Can you define:  \n",
+    "* What is the Decision Space in multi-objective optimisation? \n",
+    "* What is the Decision Space for the knapsack problem?  \n",
+    "\n",
+    "Bonus question:  \n",
+    "Can you explain why the number of packages per knapsack defines the size of the Decision Space?  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Objective Space\n",
     "\n",
     "In multi-objective optimisation the ***Objective Space*** is defined as the parameters that the user is interested in optimising over.  \n",
     "\n",
