--- a/01_knapsack 2D_exhaustive.ipynb
+++ b/01_knapsack 2D_exhaustive.ipynb
@@ -9,28 +9,23 @@
     "\n",
     "<img src=\"https://upload.wikimedia.org/wikipedia/commons/f/fd/Knapsack.svg\" width=250>\n",
     "\n",
-    "Here you will learn about Pareto Fronts.\n",
-    "\n",
-    "\n",
     "This notebook may be used in Google Colab. To access press this button:\n",
     "\n",
     "<a href=\"https://colab.research.google.com/github/elzurdo/multi_objective_optimisation/blob/master/01_knapsack%202D_exhaustive.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"First: Open In Colab\"/></a>\n",
     "\n",
+    "Here you will use the knapsack problem to learn about Pareto Fronts.\n",
     "\n",
-    "**What you'll learn**.   \n",
+    "**Main Take Aways**.   \n",
     "* Multi-objective optimisation terms: what *Decision Spaces* and *Objective Spaces* are and how to define these for the knapsack problem.\n",
-    "* The limitations of Single Objective Optimisation  \n",
+    "* The limitations of Single Objective Optimisation.  \n",
     "* Pareto Fronts: Identifying by eye Pareto optimal solutions within a distribution as well as pseudocode for selecting these non-dominated solutions.\n",
     "\n",
-    "To this end we will optimise for the knapsack problem. \n",
     "\n",
-    "> **The Knapsack Problem**   \n",
+    "\n",
+    "**The Knapsack Problem**   \n",
     "In this challenge we will fill virtual knapsacks with packages that have monetary value and weight, \n",
     "where our objective is to minimise the final weight of the knapsack and maximise the total monetary value of its contents.    \n",
     "(You will also be able to change the objectives from min-max to max-max or any other combination.) \n",
-    "\n",
-    "For simplicity, in this notebook, we will explore an exhaustive solution space, i.e, one where we can brute force our way to \n",
-    "all the solutions.  \n",
     "\n"
    ]
   },
@@ -51,7 +46,7 @@
     "    \n",
     "<details>\n",
     "        <summary>Decision and Objective Spaces</summary> \n",
-    "            These are concepts of multi-objective optimisation that have not been introduced in the previous videos  (but will appear in summary video).<br>Try to understand what they are and how this relates to the knapsack problem.  \n",
+    "            These are concepts of multi-objective optimisation that have not been introduced in the previous videos  (but will appear in summary video).<br>Try to understand what they are and how they relate to the knapsack problem.  \n",
     "</details>\n",
     "    \n",
     "<details>\n",
@@ -67,7 +62,12 @@
     "</ul>\n",
     "    \n",
     "\n",
-    "Throughout you will see ***CHANGE ME!*** next to variables that are worth exploring. In the notebook you will see recommendation of how to change them, but feel free to be creative!"
+    "Throughout you will see ***CHANGE ME!*** next to variables that are worth exploring. In the notebook you will see recommendation of how to change them, but feel free to be creative!\n",
+    "\n",
+    "\n",
+    "**Note!**  \n",
+    "For simplicity, in this notebook, we will explore an exhaustive solution space, i.e, one where we can brute force our way to \n",
+    "all the solutions.  "
    ]
   },
   {
@@ -124,11 +124,12 @@
     "\n",
     "<img src=\"https://uk.packsize.com/wp-content/uploads/sites/11/2015/05/wp-boxes.jpg\" width=300>\n",
     "\n",
-    "Here create packages by defining the distribution of weight and monetary value of each.   \n",
+    "Here we create packages by defining for each of package its weight and monetary value according to a distribution.   \n",
     "\n",
     "Parameters of interest:  \n",
     "* `N_PACKAGES` - the total number packages to choose from.  \n",
-    "* `value_distribution_mode` - indicates the relationship between the package weight and monetary value. The weights are randomly distributed where as: \n",
+    "* `value_distribution_mode` - indicates the relationship between the package weight and monetary value.   \n",
+    "The weights are randomly distributed where: \n",
     "    * `value_distribution_mode=random` - monetary value distribution also random\n",
     "    *  `value_distribution_mode=squared` - monetary value is squared that of the weights (up to some noise quantified by `noise_factor`).  "
    ]
@@ -146,7 +147,7 @@
    "source": [
     "seed = 3141592653 # CHANGE ME! to get a different distribution\n",
     "\n",
-    "N_PACKAGES = 20 # CHANGE ME! the total number of packages to choose from\n",
+    "N_PACKAGES = 20   # CHANGE ME! the total number of packages to choose from\n",
     "\n",
     "WEIGHT_MEAN = 0.1 # CHANGE ME! the mean of the weight distribution\n",
     "WEIGHT_SD = 10    # CHANGE ME! the standard deviation of the weight distribution\n",
@@ -258,12 +259,9 @@
     "\n",
     "In multi-objective optimisation the ***Decision Space*** is defined as the parameters over which the user has control.   \n",
     "\n",
-    "In the knapsack problem we have control over which packages to put in a knapsack.  \n",
+    "In the knapsack problem we have control over which packages to put in a knapsack - this is our decision to make.  \n",
     "\n",
-    "If the number of possible package combinations is small enough we can brute force our way to \n",
-    "the actual distribution. That is the objective of this notebook. \n",
-    "\n",
-    "In the subsequent tutorial we will discuss optimising in an intractable solution space.  "
+    "If the number of possible package combinations is small enough we can examine (by brute force) all possible knapsacks created by the packages. That is the objective of this notebook. (In the subsequent tutorial we will discuss optimising in an intractable decision space.)  "
    ]
   },
   {
@@ -275,9 +273,11 @@
     "`N_PACKAGES_PER_KNAPSACK` determines that number of packages that fit into a knapsack.  \n",
     "Along with the `N_PACKAGES` parameter there is a finite number of knapsacks that may be generated.  \n",
     "\n",
-    "We can easily calculate the number of combinations defined as:    \n",
+    "We can easily calculate the number of combinations defined as an unordered arrangement of $k$ objects from a set of $n$, which is called  \n",
     "\n",
-    "An unordered arrangement of $k$ objects from a set of $n$ \n",
+    "*$n$ choose $k$*\n",
+    "\n",
+    "which is calculated as:  \n",
     "$$\n",
     "_nC_k=\\frac{n!}{(n-k)!k!}\\equiv {n \\choose k}\n",
     "$$\n",
@@ -287,7 +287,16 @@
     "`n = N_PACKAGES`,  \n",
     "with assumptions for simplicity:  \n",
     "* A package can appear only once in a a knapsack.  \n",
-    "* The order of a package assigned to a knapsack does not matter.  \n"
+    "* The order of a package assigned to a knapsack does not matter. \n",
+    "\n",
+    "**Note**  \n",
+    "You do not need to understand the equation above.  \n",
+    "Below you are provided with. \n",
+    "* a calculator that runs this equation using the python `math.factorial` function   \n",
+    "* `itertools.combinations` function that creates all *n-choose-k* combinations. \n",
+    "\n",
+    "**Important!**   \n",
+    "To use `itertools.combinations` to create all *n-choose-k* combinations make sure that the calculator results in a reasonable amount of combinations that you computer can handle. Prior to quantum computing 10,000 should be sufficient. Above that your processor might struggle.  "
    ]
   },
   {
@@ -321,7 +330,7 @@
     "    else:\n",
     "        return f'{int(x):,}'\n",
     "\n",
-    "N_PACKAGES_PER_KNAPSACK = 4  # CHANGE ME! (Note! make sure that the number of combinations is below 20,000)\n",
+    "N_PACKAGES_PER_KNAPSACK = 4  # CHANGE ME! (Note! make sure that the number of combinations is below 10,000)\n",
     "# -----------\n",
     "    \n",
     "n = N_PACKAGES\n",
@@ -338,7 +347,7 @@
    "source": [
     "## Knapsacks\n",
     "\n",
-    "Here we will create the knapssacks\n",
+    "Here we will create the knapsacks\n",
     "\n",
     "\n",
     "\n",
@@ -380,6 +389,8 @@
    },
    "outputs": [],
    "source": [
+    "# we will use this list as the properties of interest of the knapsack that we will want to optimise for\n",
+    "\n",
     "objectives = ['weight', 'value']"
    ]
   },
@@ -463,6 +474,8 @@
     }
    ],
    "source": [
+    "# distribution of the knapsacks\n",
+    "\n",
     "plt.scatter([knapsacks[idx]['weight'] for idx in knapsacks], \n",
     "            [knapsacks[idx]['value'] for idx in knapsacks], \n",
     "            alpha=0.4, color='purple')\n",
@@ -479,8 +492,8 @@
    "source": [
     "Assuming you want to minimise the knapsack weight and maximise the value:  \n",
     "\n",
-    "* Which knapsack would you choose?\n",
-    "* If you could choose 3 knapsacks, which ones would you take?"
+    "* Which knapsack would you consider optimal?\n",
+    "* If you had a budget for 5 knapsacks, which ones would you choose as the most optimal?"
    ]
   },
   {
@@ -970,6 +983,15 @@
     "    \n",
     "\n",
     "plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Actions To Take**\n",
+    "\n",
+    "* Create your own distribution! Create your own custom `value_distribution_mode` in [Packages](#Packages). "
    ]
   },
   {
