rearranging Decision Space, Objective Space. Adding Objective Selection section. Adding visuals

--- a/01_knapsack 2D_exhaustive.ipynb
+++ b/01_knapsack 2D_exhaustive.ipynb
@@ -380,22 +380,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-09-11T05:23:38.077949Z",
-     "start_time": "2020-09-11T05:23:38.074441Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# we will use this list as the properties of interest of the knapsack that we will want to optimise for\n",
-    "\n",
-    "objectives = ['weight', 'value']"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
@@ -428,26 +412,76 @@
    ],
    "source": [
     "# creating all possible knapsacks\n",
-    "\n",
-    "def knapsack_objective(knapsack, objective, packages):\n",
-    "    knapsack[objective] = np.sum([packages[idx_package][objective] for idx_package in knapsack['packages']])\n",
     " \n",
     "knapsacks = {}\n",
     "for idx_knapsack, this_idxs_packages in enumerate(list(package_combinations)):\n",
     "    knapsacks[idx_knapsack] = {}\n",
     "    knapsacks[idx_knapsack]['packages']= this_idxs_packages\n",
-    "    \n",
-    "    for objective in objectives:\n",
-    "        knapsack_objective(knapsacks[idx_knapsack], objective, packages)\n",
-    "        \n",
+    "            \n",
+    "print('This is what the first four knapsacks look like:')\n",
     "{idx_knapsack: knapsack for idx_knapsack, knapsack in knapsacks.items() if idx_knapsack<4}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f'The number of knapsacks {len(knapsacks):,}\\nshould be the same as the combination that we previously calculated ({int(n_combinations):,})')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Look at the distribution of Knapsacks in the space of weight and values.  \n"
+    "**Interim Checkpoint**\n",
+    "\n",
+    "Can you define:  \n",
+    "* What is the Decision Space in multi-objective optimisation? \n",
+    "* What is the Decision Space for the knapsack problem?  \n",
+    "\n",
+    "Bonus question:  \n",
+    "Can you explain why the number of packages per knapsack defines the size of the Decision Space?  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Objective Space\n",
+    "\n",
+    "In multi-objective optimisation the ***Objective Space*** is defined as the parameters we are interested in optimising.  \n",
+    "\n",
+    "The Objective Space is related to the Decision Space via a mapping.\n",
+    "\n",
+    "\n",
+    "<img src=\"https://user-images.githubusercontent.com/6064016/97779521-7bada300-1b76-11eb-9ab9-c1aa2eaad477.png\" width=500>\n",
+    "\n",
+    "In the knapsack problem we define the Objective Space as the weights of the knapsacks and their content monetary value. The mapping from the Decision Space (the packages in each knapsack) is covered in this section using the `knapsack_objective` function.  \n",
+    "\n",
+    "Image by [Zitzler et al. (2014)](https://link.springer.com/chapter/10.1007/978-3-642-17144-4_1). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# calculating the values of the Objective Space\n",
+    "def knapsack_objective(knapsack, objective, packages):\n",
+    "    knapsack[objective] = np.sum([packages[idx_package][objective] for idx_package in knapsack['packages']])\n",
+    " \n",
+    "\n",
+    "objectives = ['weight', 'value']\n",
+    "\n",
+    "for idx_knapsack in knapsacks:\n",
+    "    for objective in objectives:\n",
+    "        knapsack_objective(knapsacks[idx_knapsack], objective, packages)\n",
+    "        \n",
+    "print('This is what the first four knapsacks look like now that we added the Objective Space:')\n",
+    "{idx_knapsack: knapsack for idx_knapsack, knapsack in knapsacks.items() if idx_knapsack<4}"
    ]
   },
   {
@@ -474,7 +508,7 @@
     }
    ],
    "source": [
-    "# distribution of the knapsacks\n",
+    "# visualising the Objective Space\n",
     "\n",
     "plt.scatter([knapsacks[idx]['weight'] for idx in knapsacks], \n",
     "            [knapsacks[idx]['value'] for idx in knapsacks], \n",
@@ -490,9 +524,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Assuming you want to minimise the knapsack weight and maximise the value:  \n",
+    "Examine the distribution of Knapsacks in the Objective Space of weight and values.  \n",
+    "Assuming that you want to minimise the knapsack weight and maximise the value:  \n",
     "\n",
-    "* Which knapsack would you consider optimal?\n",
+    "* Which one knapsack would you consider optimal?\n",
     "* If you had a budget for 5 knapsacks, which ones would you choose as the most optimal?"
    ]
   },
@@ -500,29 +535,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Interim Checkpoint**\n",
-    "\n",
-    "Can you define:  \n",
-    "* What is the Decision Space in multi-objective optimisation? \n",
-    "* What is the Decision Space for the knapsack problem?  \n",
-    "\n",
-    "Bonus question:  \n",
-    "Can you explain why the number of packages per knapsack defines the size of the Decision Space?  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Objective Space\n",
-    "\n",
-    "In multi-objective optimisation the ***Objective Space*** is defined as the parameters that the user is interested in optimising over.  \n",
+    "# Optimisation Objective\n",
     "\n",
     "In this tutorial of the knapsack problem we want to optimise for two objectives:    \n",
-    "* ↑ maximise knapsack value \n",
-    "* ↓ minimise knapsack weight  \n",
-    "\n",
-    "In the default setting here is ↑↓, but feel free to change to ↓↓, ↑↓ or ↑↑.  "
+    "* ↓ minimise the knapsack weight \n",
+    "* ↑ maximise the moentary values of the packages in the knapsack\n",
+    " \n",
+    "In the default setting here is ↓↑, but feel free to explore the other combinations: ↓↓, ↑↓ or ↑↑. (See the ***CHANGE ME!*** for `objective_mode`).    "
    ]
   },
   {
@@ -556,18 +575,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "direction_to_multiplier = {'min': div, 'max': mul}\n",
-    "mode_to_operator = {'min': less_than, 'max': greater_than}\n",
+    "# These objects are used to calculate the relationships between the knapsacks.\n",
     "\n",
-    "objective_operator = {key: mode_to_operator[objective_mode[key]] for key in objective_mode.keys()}\n",
-    "objective_operator"
+    "\n",
+    "# for Single Objective Optimisation\n",
+    "direction_to_multiplier = {'min': div, 'max': mul}\n",
+    "\n",
+    "# for Pareto Front selection\n",
+    "mode_to_operator = {'min': less_than, 'max': greater_than}\n",
+    "objective_operator = {key: mode_to_operator[objective_mode[key]] for key in objective_mode.keys()}"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Single Objective Optimal "
+    "# Single Objective Optimal \n",
+    "\n",
+    "Before addressing Pareto Fronts, which help us resolve limitations of 1D approaches, lets examine the common practice of *Single Objective Optimisation*.    \n",
+    "\n",
+    "In Single Objective Optimisation we collate the Objective Space to one parameter heuristic, \n",
+    "turning the multi-objective optimisation problem to 1D.  \n"
    ]
   },
   {
@@ -595,6 +623,13 @@
     "    return  value_heuristic * weight_heuristic\n",
     "\n",
     "knapsacks_soh = {iknapsack: knapsack_to_soh(knapsack) for iknapsack, knapsack in knapsacks.items()}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lets examine the distribution of this heuristic with a histogram."
    ]
   },
   {
@@ -641,6 +676,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our optimal knapsack will be the one with the maximum value of the heuristic.  \n",
+    "We'll find which one this is here. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {
@@ -684,15 +727,30 @@
     "\n",
     "This is the stage where a lot analyses stop and decisions are made.  \n",
     "\n",
-    "The process so far has been:  \n",
+    "For a budge of $N$ best solutions, the process so far has been:  \n",
     "* combining multiple parameters into a single heuristic\n",
     "* sorting all solutions according to this heuristic\n",
     "* selecting the top ($N\\geq1$) solutions as \"optimal\".  \n",
     "\n",
-    "It may be agruged that this is stopping short from a true in-depth exploration of that decision-objective spaces. \n",
     "\n",
-    "The 1D histogram above is the equivalent of horse blinders.  \n",
-    "Let's examine scatter plots in our full objective space (in our case 2D) to get the birds eye view.  \n",
+    "Whereas this technique is quite intuitive, easy to apply and broadly used, it comes with one main flaw:\n",
+    "\n",
+    "> It limits the view of the objective space, likely to result in suboptimal results.  \n",
+    "\n",
+    "In other words, this procedure is stopping short from a true in-depth exploration of that decision-objective spaces.   \n",
+    "The 1D histogram above is the equivalent of horse blinders. \n",
+    "\n",
+    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/2/28/Horses_2.jpg\" width=150>\n",
+    "\n",
+    "Let's examine scatter plots in our full objective space (in our case 2D) to get the birds eye view, which will enable us to see more interesting aspects of the Objective Space than the histogram can.\n",
+    "\n",
+    "<img src=\"https://lh3.googleusercontent.com/proxy/pTyGVAH5nnW7rsbmDQDRay0clvQMLD440bq_M_eJtdzp2H-pXj54p4vEe_hTYsVgCEMaWL--w05JHqjgcvwmFU_UJs1LdCpcTdgroc0lsXOCSPVeUP1WM_Lt2cbwnB8wQ0CecXpMTAduIh0SLA\" width=500>\n",
+    "\n",
+    "\n",
+    "\n",
+    " \n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
@@ -751,24 +809,68 @@
    "metadata": {},
    "source": [
     "# Pareto Optimal\n",
-    "Here you will apply and visualise a Pareto Front algorithm."
+    "Here you will apply and visualise a Pareto Front algorithm to find solutions that are called *Pareto Optimal*.\n",
+    "\n",
+    "\n",
+    "In the Single Objective Optimisation approach we pre-determined the relationship between the objectives `value` and `weights` prior to creating the heuristic which we used to select the \"best/optimal\" solution(s).  \n",
+    "\n",
+    "An alternative approach is to be agnostic, where we treat the objectives as independent/orthogonal. In most real life problems we do not know the relationships between the objectives. E.g, imagine in the case of the knapsack problem that we do not know the monetary value of the weight.   \n",
+    "\n",
+    "This means that we can examine the actual distribution in the Objective Space and find solutions (knapsacks) that are non-dominated, which we call Pareto Optimal.  \n",
+    "\n",
+    "Let's define these using the diagram below in which we want to maximise for both objectives.\n",
+    "\n",
+    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/2/27/Pareto_Efficient_Frontier_1024x1024.png\" width=300>\n",
+    "\n",
+    "* ***Dominated*** solutions (in gray) are those for which we can find at least one other solution that dominates in all objectives. E.g, solution $K$ is dominated by solution $D$ which has higher values in both objectives. There are actually 3 more solutions that dominate $K$. Can you identify all of them?  \n",
+    "\n",
+    "* ***Non Dominated*** solutions (in red; also called ***Pareto Optimal***) are those for which there is no other solution that dominates it. E.g, solution $C$ is dominated by $B$ in the objective 2, but not by objective 1. Solution $D$ dominates $C$ by objective 1 but not by 2. \n",
+    "\n",
+    "**Pareto Front**\n",
+    "\n",
+    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/f/fd/Vilfredo_Pareto_1870s2.jpg\" width=100>\n",
+    "\n",
+    "\n",
+    "\n",
+    "Named after the engineer and economist [Vilfredo Pareto](https://en.wikipedia.org/wiki/Vilfredo_Pareto), we define the Pareto Front as the set of Non Dominated solutions, and consider them as equally optimal trade-off solutions.\n",
+    "\n",
+    "Now that we know what Pareto Optimal solutions are let's see how we calculate them.  \n",
+    "\n",
+    "Before using an algorithm in Python let's examine its pseudocode. "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-09-11T05:40:22.475051Z",
-     "start_time": "2020-09-11T05:40:22.468997Z"
-    }
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "objective_values = {}\n",
+    "**Pareto Front Pseudo Code**  \n",
     "\n",
-    "for objective in objectives:\n",
-    "    objective_values[objective] = [knapsacks[idx][objective] for idx in knapsacks]"
+    "* Input: `knapsacks` is a list of knapsack objects each with properties `weight`, `value`.  \n",
+    "* Output: `pareto_front` is subset list of  `knapsacks` containing Pareto optimal solutions that minimises  `weight` and maximises `value`.  \n",
+    "\n",
+    "```python\n",
+    "--- start ---\n",
+    "pareto_front = []\n",
+    "\n",
+    "for this_knapsack in knapsacks:\n",
+    "    is_pareto = True   # we assume knapsack on the Pareto Front until proven otherwise\n",
+    "    \n",
+    "    other_knapsacks = knapsacks.remove(this_knapsack)\n",
+    "    \n",
+    "    for other_knapsack in other_knapsacks:\n",
+    "        # Does `other_knapsack` dominate `this_knapsack`?  \n",
+    "        other_dominates  = this_knapsack['weight'] > other_knapsacks['weight']\n",
+    "        other_dominates &= this_knapsack['value'] < other_knapsacks['value']\n",
+    "        \n",
+    "        if other_dominates:\n",
+    "            # knapsack dominated by at least one other knapsack, hence not pareto optimal\n",
+    "            is_pareto = False\n",
+    "            break  #  no need to compare with the rest of the other knapsacks\n",
+    "            \n",
+    "    if is_pareto:\n",
+    "        pareto_front.append(this_knapsack)     \n",
+    "--- end ---\n",
+    "```"
    ]
   },
   {
@@ -793,42 +895,15 @@
     }
    ],
    "source": [
+    "# setting up the environment for the calculation of the Pareto Front\n",
+    "# objective_values contains the values of the objectives of the knapsacks in the same order of the knapsacks object\n",
+    "\n",
+    "objective_values = {}\n",
+    "\n",
+    "for objective in objectives:\n",
+    "    objective_values[objective] = [knapsacks[idx][objective] for idx in knapsacks]\n",
+    "\n",
     "objective_values.keys()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Pareto Front Pseudo Code**  \n",
-    "\n",
-    "* Input: `knapsacks` is a list of knapsack objects each with properties `weight`, `value`.  \n",
-    "* Output: `pareto_front` is subset list of  `knapsacks` containing Pareto optimal solutions that minimises  `weight` and maximises `value`.  \n",
-    "\n",
-    "Pseudo Code: \n",
-    "```python\n",
-    "pareto_front = []\n",
-    "\n",
-    "for this_knapsack in knapsacks:\n",
-    "    is_pareto = True   # we assume knapsack on the Pareto Front until proven otherwise\n",
-    "    \n",
-    "    other_knapsacks = knapsacks.remove(this_knapsack)\n",
-    "    \n",
-    "    for other_knapsack in other_knapsacks:\n",
-    "        # Does `other_knapsack` dominate `this_knapsack`?  \n",
-    "        other_dominates  = this_knapsack['weight'] > other_knapsacks['weight']\n",
-    "        other_dominates &= this_knapsack['value'] < other_knapsacks['value']\n",
-    "        \n",
-    "        if other_dominates:\n",
-    "            # knapsack dominated by at least one other knapsack, hence not pareto optimal\n",
-    "            is_pareto = False\n",
-    "            break  #  no need to compare with the rest of the other knapsacks\n",
-    "            \n",
-    "    if is_pareto:\n",
-    "        pareto_front.append(this_knapsack)\n",
-    "        \n",
-    "\n",
-    "```"
    ]
   },
   {
@@ -841,7 +916,9 @@
    },
    "outputs": [],
    "source": [
-    "idxs_pareto = [] \n",
+    "# The Pareto Fron calculation\n",
+    "\n",
+    "idxs_pareto = []  # stores the indices of the Pareto optimal knapsacks\n",
     "\n",
     "for idx in range(len(objective_values[objective])):\n",
     "    is_pareto = True  #  we assume on Pareto Front until proven otherwise\n",
@@ -900,6 +977,8 @@
     }
    ],
    "source": [
+    "# visualising all the solutions with an emphasis on the Pareto Front\n",
+    "\n",
     "plt.scatter([knapsacks[idx]['weight'] for idx in knapsacks], [knapsacks[idx]['value'] for idx in knapsacks], alpha=0.1, color='purple')\n",
     "plt.scatter([knapsacks[idx]['weight'] for idx in idxs_pareto], [knapsacks[idx]['value'] for idx in idxs_pareto], \n",
     "            marker='x', s=100, linewidth=4, color='green', label='Pareto Front')\n",
@@ -914,7 +993,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's examine the packages of the Pareto optimal knapsacks.  "
+    "Recall that the above is the Objective Space.  \n",
+    "\n",
+    "Let's examine the Pareto Optimal solutions in the Decision Space, i.e, the packages chosen of the optimal knapsacks.  "
    ]
   },
   {
